# ap_controller_analysis

./: .gitignore  README.md  ardupilot_utils.py  controller.py  main.py  plant.py  pyproject.toml  requirements.txt  speed_alpha_model.ipynb
diagrams/: ardupilot.drawio  mode_qrtl.md  plane_ship_landing.md
tecs_analysis/: ap_conference_2024.odp  tecs_model.ipynb  tecs_model_2.ipynb  tecs_tuning.ipynb
tecs_analysis_2/: TECS_analysis.drawio  common.py  notes.md  parse_tecs_logs.py  performance_results.json  pj_layout.xml  sample_params.py  simulation_analysis.py  tecs_tuning.ipynb
